# Fleet-Dispatcher

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
.claude/: settings.json
.claude/commands/: verify-db.md
.claude/hooks/: session-start.sh
als-extensions/: README.md  install.sh
als-extensions/logic_discovery/: comms_governance.py  fleet_events.py
als-extensions/security/: declare_security.py
als-extensions/security/authentication_provider/sql/: auth_provider.py
assistant/: .env.example  Dockerfile  README.md  requirements.txt
assistant/app/: __init__.py  assistant.py  clients.py  config.py  knowledge.py  main.py  tools.py
assistant/app/providers/: __init__.py  anthropic_provider.py  base.py  openai_provider.py
assistant/deploy/: assistant.env.example  fleet-dispatcher-assistant.service
community/als-auth/: LICENSE  README.md  auth_provider.py  declare_security.py  install.sh
database/: gis_bootstrap.sql  schema.sql  seed.sql  seed_data.sql
deploy/: README.md  api.env.example  fleet-dispatcher-api.service
docs/: AI_ASSISTANT.md  AUTHENTICATION.md  DEPLOYMENT.md  DESIGN_SYSTEM.md  DEVELOPMENT_LOG.md  DISPATCHER_DESKTOP.md  GEOSPATIAL.md  INTEGRATION_SMITTY.md  MIDDLEWARE_SETUP.md  MOBILE_UI_WIDGETS.md  REALTIME.md  SPACIAL_GIS_DATA_CONSIDERATIONS.md  SPATIAL_GIS_DATA_CONSIDERATIONS.md  TEST_PLAN.md  TODO.md  architecture.md  ddd-patterns.md  domain-model.md
domain/: README.md  pyproject.toml
domain/fleet_dispatcher_domain/: __init__.py
domain/fleet_dispatcher_domain/dispatch/: __init__.py  commodity.py  load.py  parties.py  repositories.py  schedule.py  services.py
domain/fleet_dispatcher_domain/fleet/: __init__.py  driver.py  equipment.py  repositories.py
domain/fleet_dispatcher_domain/settlement/: __init__.py  repositories.py  services.py  settlement.py
domain/fleet_dispatcher_domain/shared/: __init__.py  enums.py  errors.py  events.py  model.py  policies.py  value_objects.py
domain/tests/: test_domain.py
geospatial/: .env.example  Dockerfile  README.md  requirements.txt
geospatial/app/: main.py  optimize.py  recompute.py  recompute_consumer.py  routing.py
geospatial/deploy/: fleet-dispatcher-geospatial.service
middleware/: README.md  requirements.txt
portals/dispatcher-desktop/: CMakeLists.txt  README.md  run.sh  wt_config.xml
portals/dispatcher-desktop/deploy/: desktop.env.example  fleet-dispatcher-desktop.service
portals/dispatcher-desktop/docroot/css/: fleet-dispatcher.css
portals/dispatcher-desktop/src/: ApiClient.cpp  ApiClient.h  BoardView.cpp  BoardView.h  CommBus.cpp  CommBus.h  CommPanel.cpp  CommPanel.h  FleetView.cpp  FleetView.h  HudControlBus.cpp  HudControlBus.h  HudView.cpp  HudView.h  LoadForm.cpp  LoadForm.h  LoginView.cpp  LoginView.h  MapView.cpp  MapView.h  PositionBus.cpp  PositionBus.h  ProfileView.cpp  ProfileView.h  RealtimeClient.cpp  RealtimeClient.h  SavedView.cpp  SavedView.h  SettingsView.cpp  SettingsView.h  Shell.cpp  Shell.h  Toaster.cpp  Toaster.h  icons.h  main.cpp  models.h
portals/mobile/: .env.example  .gitignore  README.md  capacitor.config.ts  index.html  package-lock.json  package.json  vite.config.ts
portals/mobile/deploy/: fleet-dispatcher-mobile.service  mobile.env.example
portals/mobile/src/: App.tsx  currentUser.ts  main.tsx  speech.d.ts  vite-env.d.ts
portals/mobile/src/api/: assistant.ts  auth.ts  client.ts  types.ts
portals/mobile/src/auth/: AuthContext.tsx
portals/mobile/src/components/: EmojiPicker.tsx
portals/mobile/src/pages/: AssistantPage.tsx  ChannelPage.tsx  ChannelsPage.tsx  LoadDetailPage.tsx  LoadsPage.tsx  LocatePage.tsx  LoginPage.tsx  MessagesPage.tsx  ProfilePage.tsx  SavedPage.tsx  TripDetailPage.tsx  TripWaypointsPage.tsx  TripsPage.tsx
portals/mobile/src/realtime/: RealtimeContext.tsx  realtimeClient.ts
portals/mobile/src/theme/: theme.ts  variables.css
realtime/: .env.example  Dockerfile  README.md  requirements.txt
realtime/app/: bridge.py  config.py  main.py
realtime/deploy/: fleet-dispatcher-realtime.service  realtime.env.example
scripts/: db-setup.sh  publish-mobile.sh
