[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fleet-dispatcher-domain"
version = "0.1.0"
description = "Pure-Python Domain-Driven Design model for Fleet Dispatcher"
requires-python = ">=3.11"
readme = "README.md"
dependencies = []  # intentionally zero runtime dependencies

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
include = ["fleet_dispatcher_domain*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
